# example-pipelines

./: README.md
java/hello-world/: README.md  package-lock.json  package.json  pipeline.ttl
node/hello-world/: README.md  package-lock.json  package.json  pipeline.ttl
python/hello-world/: .gitignore  README.md  package-lock.json  package.json  pipeline.ttl  pyproject.toml
